# GPGPU_Project

./: .gitignore  CMakeLists.txt  README.md  README.txt  fast_compile_and_run.sh  full_recompile_and_run.sh
bench/: generate_csv_from_txt_script.sh
bench/csv files/: base_model ACET.csv  hyst_trace ACET.csv  hyst_trace Nuit_blanches.csv  hyst_trace lil_clown_studio.csv  rollback  lil_clown_studio.csv  shared_hyst_erode_dilate lil_clown_studio.csv  shared_hyst_erode_dilate_opti lil_clown_studio.csv
bench/csv_files/: base_model Nuit_blanches.csv  base_model lil_clown_studio.csv  rollback ACET.csv  rollback Nuit_blanches.csv  shared_hyst_erode_dilate ACET.csv  shared_hyst_erode_dilate Nuit_blanches.csv  shared_hyst_erode_dilate_opti ACET.csv  shared_hyst_erode_dilate_opti Nuit_blanches.csv
bench/txt_files/: benchmark_cpp.yml  (+8 more)
files/: CMakeLists.txt  flake.nix  start.sh
files/src/: Compute.cpp  Compute.cu  Compute.hpp  Image.hpp  filter_impl.cu  filter_impl.h  gstfilter.c  gstfilter.h
files/src/backgroundestimationfirsttry/: HYSTERESIS.txt  backgroundestimation.cpp  backgroundestimation.cu  backgroundestimation.hpp  erode_and_dilatecpp.cpp  filter_erode_and_dilate.cpp  filter_erode_and_dilate.cu  filter_erode_dilate_shared_mem.cu  hysteresis  hysteresis.cpp  hysteresis.cu  hysteresis.hpp  labConverter.cpp  labConverter.cu  labConverter.hpp  red_mask.cu
files/src/filters/: filter_impl.hpp
files/src/filters/erode_and_dilate/: filter_erode_and_dilate.hpp  filter_erode_dilate_shared_mem.cu
files/src/logic/: backgroundUtils.hpp  background_estimation.cpp  background_estimation.cu  background_utils.hpp  backgroundestimation.cpp  backgroundestimation.cu  backgroundestimation.hpp  filter_erode_and_dilate.cpp  filter_erode_and_dilate.cu  filter_erode_and_dilate.hpp  hysteresis.cpp  hysteresis.cu  hysteresis.hpp  labConverter.cpp  labConverter.cu  labConverter.hpp  labConverterUtils.hpp  lab_converter.hpp  red_mask.cpp  red_mask.cu  red_mask.hpp
files/src/logic/background/: background_estimation.hpp  background_utils.hpp
files/src/logic/hysteresis/: hysteresis.hpp
files/src/logic/lab_converter/: lab_converter.hpp  lab_converter_utils.hpp
files/src/logic/red_mask/: red_mask.hpp
src/: Compute.cpp  Compute.hpp  gstfilter.c  gstfilter.h  stream.cpp
(+31 files in other folders)
